--- a/app/src/main/res/layout/fragment_char_creation.xml
+++ b/app/src/main/res/layout/fragment_char_creation.xml
@@ -134,7 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
-        android:text="enter choices"
+        android:text="@string/enter_choices"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="652dp" />
