Got rid of activity bar, which seemed to fix our formatting. ALso disabled number of available points Textedit. We may need to use a different type to achieve what we're looking for.

--- a/app/src/main/res/layout-land/fragment_char_creation.xml
+++ b/app/src/main/res/layout-land/fragment_char_creation.xml
@@ -96,7 +96,8 @@
                 android:layout_marginLeft="100dp"
                 android:clickable="false"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="none"
+                android:enabled="false"
                 android:minHeight="48dp"
                 android:text="3"
                 android:textAlignment="center" />
