--- a/app/src/main/res/layout-land/fragment_explore.xml
+++ b/app/src/main/res/layout-land/fragment_explore.xml
@@ -96,10 +96,10 @@
                     android:layout_weight="1" />
             </LinearLayout>
 
-            <View
+            <TextView
                 android:id="@+id/mapView"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="4" />
 
             <LinearLayout
