--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -15,5 +15,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-         />
+        android:name="com.example.dungeoncrawler.view.CharCreationFragment"
+        tools:layout="@layout/fragment_char_creation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
